<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="8dp"
    android:padding="8dp"
    app:cardCornerRadius="8dp">
    <RelativeLayout
        android:id="@+id/add_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_700"
        android:visibility="gone">
        <ImageView
            android:id="@+id/action_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_menu_add"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/action_message"
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/action_icon"
            android:text="@string/add"
            android:textColor="@color/white" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/delete_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_600"
        android:visibility="gone">
        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_menu_delete"
            tools:ignore="ContentDescription" />
        <TextView
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="@color/white" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/foreground_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <ImageView
            android:id="@+id/showImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            tools:src="@drawable/ic_dashboard"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/showName"
            style="@style/TextView.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            tools:text="@string/title_shows" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_right"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</androidx.cardview.widget.CardView>